# tauri-plugin-libmpv

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rollup.config.js
.github/workflows/: ci.yml
codegen/: Cargo.toml
codegen/src/: main.rs
examples/react/: README.md  index.html  package.json  pnpm-lock.yaml  setup-lib.ps1  vite.config.ts
examples/react/src/: App.css  App.tsx  snippet.ts  store.ts
examples/react/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
examples/react/src-tauri/capabilities/: default.json  desktop.json
examples/react/src-tauri/src/: lib.rs  main.rs
examples/react/src/hooks/: useAutoHide.ts  useCli.ts  useMpv.ts
examples/react/src/pages/: Controls.css  Controls.tsx  Player.css  Player.tsx  VideoRect.css  VideoRect.tsx
examples/react/src/utils/: commands.ts  formatTime.ts
guest-js/: cli.ts  index.ts  types.ts
libmpv-sys/: Cargo.toml  README.md  build.rs
libmpv-sys/src/: bindings.rs  lib.rs
src/: bridge.rs  commands.rs  desktop.rs  error.rs  lib.rs  models.rs  wrapper.rs
src/libmpv/: builder.rs  command.rs  error.rs  event.rs  mod.rs  property.rs  utils.rs
