[package]
name = "tauri-plugin-libmpv"
version = "0.2.2"
authors = ["22"]
description = "A Tauri plugin for embedding the mpv player in your app via libmpv."
edition = "2021"
rust-version = "1.77.2"
license = "MPL-2.0"
repository = "https://github.com/nini22P/tauri-plugin-libmpv"
keywords = ["tauri", "plugin", "mpv", "media", "player"]
categories = ["multimedia", "gui"]
readme = "README.md"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules", "/target"]
links = "tauri-plugin-libmpv"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
raw-window-handle = "0.6"
log = "0.4"
libc = "0.2"
base64 = "0.22"
scopeguard = "1"
indexmap = { version = "2", features = ["serde"] }
libloading = "0.9.0"

[target.'cfg(windows)'.dependencies]

[target.'cfg(unix)'.dependencies]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
