[package]
name = "tauri-plugin-libmpv-sys"
version = "0.2.0"
edition = "2024"
description = "Raw FFI bindings for libmpv"
license = "LGPL-2.1"
repository = "https://github.com/nini22P/tauri-plugin-libmpv"

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }
reqwest = { version = "0.12.23", features = ["blocking"], optional = true }

[features]
generate-bindings = ["bindgen", "reqwest"]
